@@ -32,7 +32,9 @@ Release 0.22b.dev (unpublished)
 
   - Adapt `DocInfo` to fixed element categories.
 
+* docutils/writers/manpage.py
 
+  - Remove code for unused emdash bullets.
 
 Release 0.21.2 (2024-04-23)
 ===========================
